CHATS_SIT/force-app/main/default/objects/sfsit_t_adjmt_hist__x.object
<CustomObject>
    <description>sfsit$t_adjmt_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfsit$t_adjmt_hist</externalName>
    <fields>
        <fullName>amt_adjmt__c</fullName>
        <description>amt_adjmt</description>
        <externalDeveloperName>amt_adjmt</externalDeveloperName>
        <label>Adjustment Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cde_agnst_adjmt__c</fullName>
        <description>cde_agnst_adjmt</description>
        <externalDeveloperName>cde_agnst_adjmt</externalDeveloperName>
        <label>Adjustment Payment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_county__c</fullName>
        <description>cde_county</description>
        <externalDeveloperName>cde_county</externalDeveloperName>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_reason_adjmt__c</fullName>
        <description>cde_reason_adjmt</description>
        <externalDeveloperName>cde_reason_adjmt</externalDeveloperName>
        <label>Adjustment Reason Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_status_adjmt__c</fullName>
        <description>cde_status_adjmt</description>
        <externalDeveloperName>cde_status_adjmt</externalDeveloperName>
        <label>Adjustment Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_type_adjmt__c</fullName>
        <description>cde_type_adjmt</description>
        <externalDeveloperName>cde_type_adjmt</externalDeveloperName>
        <label>Adjustment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_type_clsfn__c</fullName>
        <description>cde_type_clsfn</description>
        <externalDeveloperName>cde_type_clsfn</externalDeveloperName>
        <label>Classification Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_type_disptn__c</fullName>
        <description>cde_type_disptn</description>
        <externalDeveloperName>cde_type_disptn</externalDeveloperName>
        <label>Disposition type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_type_method__c</fullName>
        <description>cde_type_method</description>
        <externalDeveloperName>cde_type_method</externalDeveloperName>
        <label>Method type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dte_change_last__c</fullName>
        <description>dte_change_last</description>
        <externalDeveloperName>dte_change_last</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_crtd_adjmt__c</fullName>
        <description>dte_crtd_adjmt</description>
        <externalDeveloperName>dte_crtd_adjmt</externalDeveloperName>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_discv_adjmt_orig__c</fullName>
        <description>dte_discv_adjmt_orig</description>
        <externalDeveloperName>dte_discv_adjmt_orig</externalDeveloperName>
        <label>Original Discovery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_end_adjmt__c</fullName>
        <description>dte_end_adjmt</description>
        <externalDeveloperName>dte_end_adjmt</externalDeveloperName>
        <label>Care End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_start_adjmt__c</fullName>
        <description>dte_start_adjmt</description>
        <externalDeveloperName>dte_start_adjmt</externalDeveloperName>
        <label>Care Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>idn_adjmt__c</fullName>
        <description>idn_adjmt</description>
        <externalDeveloperName>idn_adjmt</externalDeveloperName>
        <label>Adjustment</label>
        <length>50</length>
        <referenceTargetField>T_ADJMT__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_ADJMT__c</referenceTo>
        <relationshipLabel>Adjustment Legacy History</relationshipLabel>
        <relationshipName>sfsit_t_adjmt_hist</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_adjmt_hist__c</fullName>
        <description>idn_adjmt_hist</description>
        <externalDeveloperName>idn_adjmt_hist</externalDeveloperName>
        <label>Adjustment History ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_auth__c</fullName>
        <description>idn_auth</description>
        <externalDeveloperName>idn_auth</externalDeveloperName>
        <label>Authorization ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_case__c</fullName>
        <description>idn_case</description>
        <externalDeveloperName>idn_case</externalDeveloperName>
        <label>Case ID</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_case_legacy__c</fullName>
        <description>idn_case_legacy</description>
        <externalDeveloperName>idn_case_legacy</externalDeveloperName>
        <label>Legacy case ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>idn_office__c</fullName>
        <description>idn_office</description>
        <externalDeveloperName>idn_office</externalDeveloperName>
        <label>Office ID</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>idn_prog_fndg__c</fullName>
        <description>idn_prog_fndg</description>
        <externalDeveloperName>idn_prog_fndg</externalDeveloperName>
        <label>Funding Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>idn_provr__c</fullName>
        <description>idn_provr</description>
        <externalDeveloperName>idn_provr</externalDeveloperName>
        <label>Provider ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_user_change_last__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>idn_user_change_last</description>
        <externalDeveloperName>idn_user_change_last</externalDeveloperName>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>sfsit_t_adjmt_hist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ind_ord_court_adjmt__c</fullName>
        <description>ind_ord_court_adjmt</description>
        <externalDeveloperName>ind_ord_court_adjmt</externalDeveloperName>
        <label>Court Ordered Adjustment</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_record_delete_logcl__c</fullName>
        <description>ind_record_delete_logcl</description>
        <externalDeveloperName>ind_record_delete_logcl</externalDeveloperName>
        <label>Logical delete indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_reimbsl_pmt__c</fullName>
        <description>ind_reimbsl_pmt</description>
        <externalDeveloperName>ind_reimbsl_pmt</externalDeveloperName>
        <label>Reimbursable payment</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>Number Sequence history</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nbr_seq_wrkld__c</fullName>
        <description>nbr_seq_wrkld</description>
        <externalDeveloperName>nbr_seq_wrkld</externalDeveloperName>
        <label>Number Sequence workload</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Adjustment History</label>
    <pluralLabel>Adjustment History</pluralLabel>
</CustomObject>